# django-react-docker-stack

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/authentication/: adapter.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/core/: settings.py  settings_test.py  urls.py  views.py
backend/templates/: 429.html
backend/tests/: test_init.py
docker/nginx/: Dockerfile  nginx.conf
docs/: postman_collection.json  postman_environment.json
scripts/: warp-shell.sh
