[project]
name = "api"
version = "0.1.0"
description = "Django API for fullstack application"
authors = [
    {name = "Robert Marinho",email = "robstermarinho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "markdown (>=3.9,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-allauth[socialaccount] (>=65.11.2,<66.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
